--- a/templates/image.html
+++ b/templates/image.html
@@ -23,4 +23,6 @@
     <img src="{{ image_url }}" alt="{{ title }}">
 </body>
 </html>
+<!-- ЭТОТ ФАЙЛ ИСПОЛЬЗУЕТСЯ ДЛЯ ОТОБРАЖЕНИЙ В ОТДЕЛЬНОЙ ВКЛАДКЕ БРАУЗЕРА ФОТОГРАФИЙ. ПОЗВОЛЯЕТ СТИЛИЗИРОВАТЬ ИЗОБРАЖЕНИЕ (РАМКИ, ТЕНЬ, МАСШТАБ). -->
+<!-- ГИБЧЕ, ЧЕМ ПРОСТО ОТКРЫТИЕ static/filename.png, ГДЕ КАРТИНКА ПОКАЗЫВАЕТСЯ "КАК ЕСТЬ", БЕЗ ОФОРМЛЕНИЯ -->
 
